Fri Sep 28 17:26:27 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rubygems/installer.rb (check_that_user_bin_dir_is_in_path):
	  test_generate_bin_bindir_with_user_install_warning(TestGemInstaller)
	  fails on Windows with msys bash. It makes comparing paths
	  case-insensitive.
	  pick from upstream to fix a failure of test-all [ruby-core:47711]
	  https://github.com/rubygems/rubygems/commit/c474edb2f3704206f04da1c8c6cf9fb079d84abe

Fri Sep 28 15:44:45 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (search_method): copy refinement iclasses to search
	  superclasses correctly.

	* test/ruby/test_refinement.rb: related test.

Fri Sep 28 15:15:41 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_checkenv): remove unused instruction `opt_checkenv'.

	* compile.c (iseq_compile_each): ditto.

	* node.h: remove unused node `NODE_OPTBLOCK'.

	* ext/objspace/objspace.c, gc.c (gc_mark_children): ditto.

Fri Sep 28 13:14:34 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: now VM_DEBUG_BP_CHECK should be 1.

Fri Sep 28 12:51:54 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: remove rb_control_frame_t::bp (bp: base pointer).
	  `bp' can be calculate by `sp' (stack pointer) of previous frame.
	  Now, `bp_check' field is remained for debug.  You can eliminate
	  this field by setting  VM_DEBUG_BP_CHECK as 0.

	* vm_insnhelper.c (vm_base_ptr): add `vm_base_ptr(cfp).
	  This function calculates base pointer from cfp.

	* vm_insnhelper.c (vm_setup_method): push `recv' value on top of
	  value stack (before method parameters).
	  This change is for keeping consistency with normal method dispatch.

	* insns.def: fix to use vm_base_ptr().

	* vm.c (vm_exec): ditto.

	* vm_dump.c: remove `bp' related dumps.

	* cont.c (fiber_init): fix to check VM_DEBUG_BP_CHECK.

Fri Sep 28 10:40:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): accept File::Constants as well as mode string.
	  based on the patch by Glass_saga (Masaki Matsushita) in